practice/aliyun/ack/admin3-ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-admin3-ui
  namespace: yuyang
spec:
  selector:
    app: pod-admin3-ui
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
